[gd_scene load_steps=19 format=3 uid="uid://nckclgtghic8"]

[ext_resource type="Script" uid="uid://csvlbjn1o20md" path="res://Player/player.gd" id="1_v0iea"]
[ext_resource type="Script" uid="uid://3lohkj8fwjfc" path="res://Player/camera_system.gd" id="2_4ntmi"]
[ext_resource type="Script" uid="uid://6qg5vu7djvl7" path="res://Player/StateMachine/Player State Machine/player_state_machine.gd" id="3_btcbx"]
[ext_resource type="Resource" uid="uid://biq2jbjvs6vlc" path="res://Player/player_movement_stats.tres" id="4_p5o4e"]
[ext_resource type="Script" uid="uid://7qa82f57cuvs" path="res://Player/StateMachine/Player State Machine/States/idle.gd" id="4_vtle1"]
[ext_resource type="Script" uid="uid://b1mjgxce8jevu" path="res://Player/StateMachine/Player State Machine/States/run.gd" id="5_od3ui"]
[ext_resource type="Script" uid="uid://dwr68lnl58h2q" path="res://Player/StateMachine/Player State Machine/States/jump.gd" id="6_00tjw"]
[ext_resource type="Script" uid="uid://ksanj7ohmfkp" path="res://Player/StateMachine/Player State Machine/States/fall.gd" id="7_x3vf3"]
[ext_resource type="Script" uid="uid://dwhajjbgja7j2" path="res://Player/StateMachine/Player State Machine/States/sprint.gd" id="8_od3ui"]
[ext_resource type="Script" uid="uid://divwlwq6jper" path="res://Player/StateMachine/Player State Machine/States/sprint_jump.gd" id="9_x3vf3"]
[ext_resource type="Script" uid="uid://dl0plj7rl1hba" path="res://Player/StateMachine/Player State Machine/States/sprint_fall.gd" id="10_apopc"]
[ext_resource type="Script" uid="uid://c4bd3bb8mtws4" path="res://Player/StateMachine/Player State Machine/States/aim_idle.gd" id="11_5htga"]
[ext_resource type="Script" uid="uid://gsv2uo1wth52" path="res://Player/StateMachine/Player State Machine/States/aim_walk.gd" id="12_p5o4e"]
[ext_resource type="PackedScene" uid="uid://cswo48u1tqswm" path="res://Player/Weapon Manager/Weapons/pistol.tscn" id="15_lfmf2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0xm2m"]
radius = 0.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_h2yge"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4ntmi"]
margin = 0.01

[sub_resource type="SphereShape3D" id="SphereShape3D_btcbx"]
margin = 0.01
radius = 0.1

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 2
script = ExtResource("1_v0iea")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0xm2m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
layers = 2
mesh = SubResource("CapsuleMesh_h2yge")
skeleton = NodePath("../CollisionShape3D")

[node name="Camera System" type="Node3D" parent="." node_paths=PackedStringArray("character", "edge_spring_arm", "rear_spring_arm", "camera")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.99107003, 1.2223461)
script = ExtResource("2_4ntmi")
character = NodePath("..")
edge_spring_arm = NodePath("EdgeSpring")
rear_spring_arm = NodePath("EdgeSpring/RearSpring")
camera = NodePath("EdgeSpring/RearSpring/Camera3D")
aim_edge_spring_length = 0.8
aim_speed = 0.4
sprint_fov = 100.0

[node name="EdgeSpring" type="SpringArm3D" parent="Camera System"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, -0.60629535, -1.2223463)
shape = SubResource("SphereShape3D_4ntmi")

[node name="RearSpring" type="SpringArm3D" parent="Camera System/EdgeSpring"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1.2223464, 0.60629535, 0.5079438)
shape = SubResource("SphereShape3D_btcbx")
spring_length = 1.5

[node name="Camera3D" type="Camera3D" parent="Camera System/EdgeSpring/RearSpring"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.5, 0.17575788, 1.2836767)

[node name="State Machine" type="Node" parent="."]

[node name="Unarmed" type="Node" parent="State Machine"]

[node name="Unarmed State Machine" type="Node" parent="State Machine/Unarmed" node_paths=PackedStringArray("start_state")]
script = ExtResource("3_btcbx")
player_movement_stats = ExtResource("4_p5o4e")
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("4_vtle1")

[node name="Run" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("5_od3ui")

[node name="Jump" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("6_00tjw")

[node name="Fall" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("7_x3vf3")

[node name="Sprint" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("8_od3ui")

[node name="SprintJump" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("9_x3vf3")

[node name="SprintFall" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("10_apopc")

[node name="AimIdle" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("11_5htga")

[node name="AimWalk" type="Node" parent="State Machine/Unarmed/Unarmed State Machine"]
script = ExtResource("12_p5o4e")

[node name="pistol" parent="." instance=ExtResource("15_lfmf2")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0.55214226, 0.13932776, 0)

[node name="RayCast3D" type="RayCast3D" parent="pistol"]
transform = Transform3D(-4.371139e-08, -1, 4.371139e-08, 0, -4.371139e-08, -1, 1, -4.371139e-08, 1.9106855e-15, 0.38388538, 0.025255442, 0)
target_position = Vector3(0.5, -100, 1.284)
collision_mask = 9
collide_with_areas = true
debug_shape_custom_color = Color(0.7738555, 2.23808e-06, 9.62615e-07, 1)

[connection signal="sprint_end" from="State Machine/Unarmed/Unarmed State Machine/Sprint" to="Camera System" method="_on_sprint_end"]
[connection signal="sprint_start" from="State Machine/Unarmed/Unarmed State Machine/Sprint" to="Camera System" method="_on_sprint_sprint_start"]
[connection signal="sprint_end" from="State Machine/Unarmed/Unarmed State Machine/SprintFall" to="Camera System" method="_on_sprint_end"]
[connection signal="aim_enter" from="State Machine/Unarmed/Unarmed State Machine/AimIdle" to="Camera System" method="_on_aim_enter"]
[connection signal="aim_exit" from="State Machine/Unarmed/Unarmed State Machine/AimIdle" to="Camera System" method="_on_aim_exit"]
[connection signal="aim_enter" from="State Machine/Unarmed/Unarmed State Machine/AimWalk" to="Camera System" method="_on_aim_enter"]
[connection signal="aim_exit" from="State Machine/Unarmed/Unarmed State Machine/AimWalk" to="Camera System" method="_on_aim_exit"]
